samples/_failures_safe/1761372474_808fa2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7b5ac4c9.c: In function ‘main’:
./samples/SAFE/__tmp_7b5ac4c9.c:152:17: error: expected declaration or statement at end of input
  152 |                 } else {
      |                 ^
./samples/SAFE/__tmp_7b5ac4c9.c:152:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_7b5ac4c9.c:152:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_7b5ac4c9.c:152:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_7b5ac4c9.c:152:17: error: expected declaration or statement at end of input
